# saturn-mousehunter-auth-service

./: .env  .env.example  AUTH_SERVICE_ARCHITECTURE.md  Dockerfile  README.md  comprehensive_test.py  export_menu_data.py  menu_initializer.py  menu_permission_examples.py  menu_stats_export.json  menu_tree_export.json  pyproject.toml  test_auth_server.py  test_basic.py  test_core_menu_apis.py  test_dependencies.py  test_full_api.sh  test_hash.py  test_menu_api.py  test_menu_batch_import.py  test_menu_import_comprehensive.py  test_menu_permissions.py  test_menu_permissions_simple.py  test_menu_tree.py  test_report.json  test_saturn_mhc_menus.py  test_user_menus_endpoint.py  user_menus_endpoint_test_report.md  user_menus_endpoint_test_response.json  user_menus_export.json  user_type_fix_validation.py
.serena/: project.yml
docs/: AuthMenuApiModels.kt  CORE_MENU_API_DOCUMENTATION.md  KOTLIN_QUICKLY_MENU_INTEGRATION_GUIDE.md  KotlinClientUsageExample.kt  MENU_BATCH_IMPORT_API.md  MENU_MANAGEMENT_API.md  MENU_PERMISSION_API.md  MENU_PERMISSION_SYSTEM.md  MINIMAL_MENU_API_GUIDE.md  MenuApiModels.kt  PERMISSION_API.md  PERMISSION_QUICK_REFERENCE.md  PERMISSION_SYSTEM.md  ROLE_PERMISSION_API.md  api-reference.md  auth_service_openapi.json  fastapi-auth-service-api.md  menu-api-openapi.json  menu-batch-import-openapi.json  menu-types.ts  menu_tree_structure.json  openapi-auth-service.json  openapi.json  testing-guide.md
src/: complete_auth_init.sql  grant_admin_permissions.sql  main.py  token.txt
test_export/: test_frontend_config.json  test_statistics.json
tests/: README.md  (+1 more)
(+61 files in other folders)
