[project]
name = "saturn-mousehunter-auth-service"
version = "0.1.0"
description = "Saturn MouseHunter Authentication Service"
readme = "README.md"
authors = [
    { name = "cenwei", email = "cenwei@msn.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
    "asyncpg>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "saturn-mousehunter-shared>=0.1.0",
    "pyjwt>=2.10.1",
    "email-validator>=2.3.0",
]

[project.scripts]
saturn-mousehunter-auth-service = "main:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
